<resources>
    <string name="app_name">Plasma+</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="navheader_title">PLASMA+</string>
    <string name="navheadersubtitle">Plasma and Blood Banking App</string>
    <string name="navheaderdesc">Navigation Header</string>
    <string name="profile">View Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="shareApp">Share</string>
    <string name="emailUs">Email Us</string>
    <string name="language_dialog_message">Select Language (ভাষা নির্বাচন করুন)</string>
    <string name="language_dialog_english">English</string>
    <string name="language_dialog_bengali">বাংলা</string>
    <string name="welcome">Welcome</string>
    <string name="connection_error">Connection Error! Please try again after a while</string>
    <string name="find_a_donor">Find A Donor</string>
    <string name="add_patient">Add Patient</string>
    <string name="requests">Requests</string>
    <string name="press_one_more_time">Press back one more time to exit</string>
    <string name="responses">Responses</string>
    <string name="my_patients">My Patients</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="explore_patients">Explore Patients</string>
    <string name="explore_donors">Explore Donors</string>
    <string name="change_language">Change Language</string>
    <string name="cancel">Cancel</string>
    <string name="image_retrieve_failed">Error! Image retrieve failed</string>
    <string name="label_age">Age :</string>
    <string name="label_gender">Gender</string>
    <string name="label_blood_grp">Blood Group</string>
    <string name="label_hospital">Hospital</string>
    <string name="label_division">Division</string>
    <string name="label_district">District</string>
    <string name="select_date_textview">Select Date</string>
    <string name="plasma_checkbox_text">Need Plasma (For Plasma Therapy)</string>
    <string name="error_occured">Error occurred! Try again</string>
    <string name="hint_enter_district">Enter District</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="phone_number_hint">01xxxxxxxxx</string>
    <string name="label_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="label_name">Name</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="label_age_1">Age</string>
    <string name="enter_age_hint">Enter Age</string>
    <string name="label_thana">Thana/Upazilla</string>
    <string name="enter_thana_hint">Enter Thana</string>
    <string name="label_confirm_passord">Confirm Password</string>
    <string name="password_hint">******</string>
    <string name="update_profile">Update Profile</string>
    <string name="is_required_txt">is required</string>
    <string name="confirm_update_txt">Confirm Update?</string>
    <string name="yes_txt">Yes</string>
    <string name="failed_to_update_error">Failed to update! Check your connection and try again.</string>
    <string name="address_with_colon">Address :</string>
    <string name="phone_with_colon">Phone :</string>
    <string name="phone">Phone</string>
    <string name="blood_group_with_colon">Blood Group :</string>
    <string name="accept_request">Accept</string>
    <string name="decline_request">Decline</string>
    <string name="ask_for_help">Ask For Help</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="wrong_password_error">Wrong Password</string>
    <string name="send_sms">Send SMS</string>
    <string name="not_permitted">Not Permitted!</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="pending">Pending</string>
    <string name="donated">Donated</string>
    <string name="not_donated">Not Donated</string>
    <string name="claimed">Claimed</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="canceled">Canceled</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="donate_to_help">Donate to Help</string>
    <string name="ok_txt">OK</string>
    <string name="proceed">Proceed</string>
    <string name="go_back">Go Back</string>
    <string name="delete_profile_are_you_sure">Are you sure? All data and activities associated will be deleted.</string>
    <string name="delete_failed">Delete Failed!</string>
    <string name="error_occurred_try_again">Error occurred! Please try again</string>
    <string name="connection_failed_try_again">Connection failed! Please try again</string>
    <string name="image_not_found">Image Not found</string>
    <string name="date_of_requirement">Date of requirement</string>
    <string name="no_patient_record_found">Add Record to Search</string>
    <string name="dashboard_header">Dashboard</string>
    <string name="dashboard_welcome_to">Welcome to Plasma+</string>
    <string name="dashboard_text_explore">Explore</string>
    <string name="dashboard_text_no_of_patients">Patients</string>
    <string name="dashboard_text_requestB">From Patients</string>
    <string name="dashboard_text_requestA">From Donors</string>
    <string name="dashboard_text_no_of_donors">Donors</string>
    <string name="dashboard_error_message">Failed to Update Dashboard</string>
    <string name="bld_req_name_edittext">Enter Your Name</string>
    <string name="bld_req_label_name">Name :</string>
    <string name="bld_req_age_edittext">Enter Your Age</string>
    <string name="bld_req_hospital_edittext">Enter Hospital Name</string>
    <string name="bld_req_label_date">Date (When needed)</string>
    <string name="bld_req_request_btn">Submit</string>
    <string name="bld_req_activity_patient_added">Patient Profile Added Successfully</string>
    <string name="bld_req_activity_connection_problem">Connection Problem! Try again</string>
    <string name="donor_requests_header">Request from Patients</string>
    <string name="donor_requests_pending_requests">Pending Requests</string>
    <string name="donor_requests_show_accepted_requests">Show Accepted Requests</string>
    <string name="donor_requests_show_pending_requests">Show Pending Requests</string>
    <string name="donor_response_header">Response from Donors</string>
    <string name="explore_patients_textview">Search Patients</string>
    <string name="find_donor_fordonors_label_district">Filter by District</string>
    <string name="find_donor_fordonors_textview">Available Donors</string>
    <string name="find_donor_fordonors_nomatchtextview">No Matching Donor Found</string>
    <string name="login_request_textview">Please Login to Your Account</string>
    <string name="login_forgot_password_textview">Forgot Password</string>
    <string name="login_sign_in_button">Sign In</string>
    <string name="login_no_account_textview">Don\'t have an account?</string>
    <string name="login_activity_phone_number_edittext">Phone Number Required</string>
    <string name="login_activity_password_edittext">Password Required</string>
    <string name="login_activity_wrong">Wrong Phone or Password</string>
    <string name="login_activity_error_response">An error occurred! Check your connection and try again</string>
    <string name="my_patients_textview">Patients Found</string>
    <string name="patient_requests_header">Request From Donors</string>
    <string name="patients_response_header">Response From Patients</string>
    <string name="patients_response_type_textView">Responses from the Patients approached</string>
    <string name="phn_ver_get_otp_button">Get OTP</string>
    <string name="phn_ver_activity_invalid_phone">Invalid Phone Number</string>
    <string name="phn_ver_activity_not_registered">This Phone number is not registered</string>
    <string name="phn_ver_activity_already_registered">This Phone number is already registered</string>
    <string name="phn_ver_activity_verification_success">Phone Number is successfully Verified</string>
    <string name="phn_ver_activity_verification_failed">Phone Number Verification Failed</string>
    <string name="search_donor_filter_result">Donors Found</string>
    <string name="reg_heading_textview">User Registration</string>
    <string name="reg_donor_checkbox">I am a Donor</string>
    <string name="reg_plasma_checkbox">I want to Donate Plasma</string>
    <string name="reg_activity_password_length">Password must be of at least 6 characters</string>
    <string name="reg_activity_password_no_match">Password does not match</string>
    <string name="reg_activity_registration_success">Registration Successful!</string>
    <string name="reg_activity_registration_failed">Failed to register! Check your connection and try again</string>
    <string name="update_password_heading_textview">Update Password</string>
    <string name="update_password_label_password">New Password</string>
    <string name="update_password_update_btn">Confirm Update</string>
    <string name="update_password_update_failed">Failed to Update Password! Check your connection and try again</string>
    <string name="update_password_update_success">Password Update Successful!</string>
    <string name="update_patient_hospital_edittext">Enter Hospital</string>
    <string name="update_patient_label_date">Requirement Date</string>
    <string name="update_patient_activity_update_successful">Patient Profile Successfully Updated!</string>
    <string name="label_donor_role">Role of User (Donor/General User)</string>
    <string name="update_donor_role_radio_group_blood">Blood</string>
    <string name="update_donor_role_radio_group_plasma">Plasma</string>
    <string name="update_donor_role_radio_group_blood_and_plasma">Blood and Plasma</string>
    <string name="update_donor_role_radio_group_none">General User/Acceptor</string>
    <string name="update_activity_update_successful">Profile Successfully Updated!</string>
    <string name="donor_profile_header">Donor Profile</string>
    <string name="donor_profile_label_type">Donor Role :</string>
    <string name="donor_profile_send_request_suggestion">Select a patient to send Donor Request! If your request is accepted, phone number will be visible.</string>
    <string name="donor_profile_activity_send_request">Send Request?</string>
    <string name="donor_profile_activity_Request_Sent">Request Sent! Wait For Donor\'s Response</string>
    <string name="donor_profile_activity_Call_Donor">Call Donor</string>
    <string name="donor_profile_activity_notification_accepted_1">Request Accepted from Patient!</string>
    <string name="donor_profile_activity_notification_accepted_2">has accepted your request. Check Response from Patients.</string>
    <string name="donor_profile_activity_notification_declined_1">Request Declined from Patient!</string>
    <string name="donor_profile_activity_notification_declined_2">has declined your request. Check Response from Patients.</string>
    <string name="donor_profile_activity_notification_confirmed_1">Donation Confirmed by Patient!</string>
    <string name="donor_profile_activity_notification_confirmed_2">has confirmed your donation. Check Response from Patients.</string>
    <string name="donor_profile_activity_notification_not_confirmed_1">Donation Declined by Patient!</string>
    <string name="donor_profile_activity_notification_not_confirmed_2">has declined your donation. Check Response from Patients.</string>
    <string name="donor_profile_activity_notification_incoming_1">Incoming Request from Patient!</string>
    <string name="donor_requests_norecordtextview">No Requests from Patients</string>
    <string name="all_requests">All Requests</string>
    <string name="all">All</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
</resources>