<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group>
        <item
            android:id="@+id/profile"
            android:title="@string/profile" />

        <item android:title="@string/change_language">
            <menu>
                <item
                    android:id="@+id/english"
                    android:title="English" />
                <item
                    android:id="@+id/bangla"
                    android:title="বাংলা" />
            </menu>
        </item>


    </group>

    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/shareApp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shareApp" />
            <item
                android:id="@+id/emailUs"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/emailUs" />
        </menu>
    </item>

</menu>
