<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".RequestsFromPatientsActivity">

    <TextView
        android:id="@+id/donor_requests_norecordtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/donor_requests_norecordtextview"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/donor_requests_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="-16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/donor_requests_header"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/donor_requests_back_button"
        app:layout_constraintStart_toEndOf="@+id/donor_requests_back_button"
        app:layout_constraintTop_toTopOf="@+id/donor_requests_back_button" />


    <TextView
        android:id="@+id/donor_requests_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/all_requests"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <HorizontalScrollView
        android:id="@+id/linearLayout"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_requests_header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/donor_requests_show_All_requests"
                android:layout_width="135dp"
                android:layout_height="wrap_content"


                android:background="@drawable/tabstyleselected"
                android:enabled="false"
                android:fontFamily="@font/raleway_bold"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/all"
                android:textColor="@color/textColorDark"
                android:textSize="12sp" />

            <Button
                android:id="@+id/donor_requests_show_pending_requests"
                android:layout_width="135dp"
                android:layout_height="wrap_content"


                android:background="@drawable/tabstyle_not_selected"
                android:enabled="true"
                android:fontFamily="@font/raleway_bold"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/pending"
                android:textColor="@color/textColorGrey"
                android:textSize="12sp" />

            <Button
                android:id="@+id/donor_requests_show_successful_requests"
                android:layout_width="135dp"
                android:layout_height="wrap_content"


                android:background="@drawable/tabstyle_not_selected"


                android:enabled="true"
                android:fontFamily="@font/raleway_bold"
                android:paddingLeft="15dp"

                android:paddingRight="15dp"
                android:text="@string/successful"
                android:textColor="@color/textColorGrey"
                android:textSize="12sp"

                />

            <Button
                android:id="@+id/donor_requests_show_failed_requests"
                android:layout_width="135dp"
                android:layout_height="wrap_content"

                android:background="@drawable/tabstyle_not_selected"
                android:enabled="false"
                android:fontFamily="@font/raleway_bold"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/failed"
                android:textColor="@color/textColorGrey"
                android:textSize="12sp" />


        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/donor_requests_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donor_requests_type_textView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/donor_requests_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/donor_requests_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/donor_requests_recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/donor_requests_recyclerview" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>